--- a/index.html
+++ b/index.html
@@ -83,14 +83,13 @@
             </div>
           </div>
         </div>
-        <small>
-          <a
-            href="https://github.com/Ofentse-Ngatane/weather-app"
-            target="_blank"
-            >Open-source code</a
-          >
-        </small>
       </div>
+      <small>
+        <a href="https://github.com/Ofentse-Ngatane/weather-app" target="_blank"
+          >Open-source code</a
+        >
+        ", by Ofentse Ofentse-Ngatane"
+      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
