--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </div>
           </div>
         </form>
-        <h1 id="city">Johannesburg</h1>
-        <h2 id="date">Friday 16:20</h2>
-        <h3 id="description">Partly Cloudy</h3>
-        <span class="temperature" id="temperature">⛅️19 </span>
+        <h1 id="city"></h1>
+        <h2 id="date"></h2>
+        <h3 id="description"></h3>
+        <span class="temperature" id="temperature">⛅️</span>
         <span class="units"> °C </span>
         <ul class="precipitation">
           <li>Humidity: <span id="humidity"></span> %</li>
